--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
     <!-- About Section -->
     <section id="about" class="about">
       <div class="section-header">
-        <h2 class="section-title">
-          CHARACTER BIO
-        </h2>
+        <h2 class="section-title">CHARACTER BIO</h2>
       </div>
       <div class="about-content">
         <div class="bio-panel">
@@ -184,9 +182,7 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
       <div class="section-header">
-        <h2 class="section-title">
-          SKILL TREE
-        </h2>
+        <h2 class="section-title">SKILL TREE</h2>
       </div>
       <div class="skills-grid">
         <div class="skill-category">
@@ -318,9 +314,7 @@
     <!-- Career Section -->
     <section id="career" class="career">
       <div class="section-header">
-        <h2 class="section-title">
-          QUEST LOG
-        </h2>
+        <h2 class="section-title">QUEST LOG</h2>
       </div>
       <div class="timeline">
         <div class="timeline-item">
@@ -427,7 +421,7 @@
               industries.
             </p>
             <div class="project-tech">
-             <span class="tech-tag">Wordpress</span>
+              <span class="tech-tag">Wordpress</span>
               <span class="tech-tag">Elementor</span>
               <span class="tech-tag">WP Froms</span>
             </div>
@@ -589,9 +583,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
       <div class="section-header">
-        <h2 class="section-title">
-          TERMINAL ACCESS
-        </h2>
+        <h2 class="section-title">TERMINAL ACCESS</h2>
       </div>
       <div class="terminal-container">
         <div class="terminal-header">
@@ -667,6 +659,6 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="./public/script.js"></script>
   </body>
 </html>
