--- a/index.html
+++ b/index.html
@@ -659,6 +659,6 @@
       </div>
     </section>
 
-    <script src="./public/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
