--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- EmailJS SDK -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
   </head>
   <body>
     <!-- Loading Screen -->
@@ -89,10 +94,20 @@
               <span class="stat-value">EXPERT</span>
             </div>
           </div>
-          <button class="cta-button">
-            <span>START MISSION</span>
-            <div class="button-glow"></div>
-          </button>
+          <div class="buttons">
+            <button class="cta-button">
+              <span>START MISSION</span>
+              <div class="button-glow"></div>
+            </button>
+            <a
+              href="./src//resume.pdf"
+              download="Bharat_Singh_Chouhan_Resume.pdf"
+              class="resume-button"
+            >
+              <span>DOWNLOAD RESUME</span>
+              <div class="button-glow"></div>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -659,6 +674,6 @@
       </div>
     </section>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
